# FinOps-Autonomous-Loop

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  approve.py  finops-rbac.yaml
actor/: test-workload.yaml
actor/inventory/: hosts.yml
actor/playbooks/: notify-slack.yml  remediate-safe.yml
approval/: Dockerfile  deploy.yaml  server.py
contracts/: remediation-intent.schema.json
deploy/: approval-server.yaml  configmap-clusters.yaml  configmap.yaml  cronjob.yaml  secret-cluster-tokens.yaml
docs/: DEMO.md  presentation-slides.md
eda/rulebooks/: loop.yml
extensions/eda/rulebooks/: loop.yml
observer/: Dockerfile  check_eligibility.py  clusters.json  pyproject.toml
observer/finops_observer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
observer/observer/: auth.py  cluster.py  config.py  costmgmt.py  gates.py  main.py  models.py  notify.py  savings.py
observer/tests/: test_cluster.py  test_gates.py  test_models.py  test_savings.py
observer/tests/fixtures/: recommendation.json
scripts/: approve.sh  demo-interactive.sh  demo-reset.sh  demo-run.sh  env-actor.sh  env-observer.sh  reset.sh  rollback-demo.sh  run-loop.sh  run-observer.sh  setup-demo.sh  start-eda.sh
