[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finops-observer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic>=2",
    "kubernetes",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["observer*"]
